--- a/q1/index.html
+++ b/q1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/show.jpg" class="card-img-top" alt="אירוע 1">
+                        <img src="/q1/images/show.jpg" class="card-img-top" alt="אירוע 1">
                         <div class="card-body">
                         <h5 class="card-title">מופע פתיחה</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 20:00</h6>
@@ -24,77 +24,77 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 2">
+                        <img src="/q1/images/event2.jpg" class="card-img-top" alt="אירוע 2">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p  class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">שוק לילה ובירה מקומית</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">ראשון, 21:00</h6>
+                        <p  class="card-text">מתחם דוכנים עם אוכל רחוב ובירות ממבשלות מקומיות</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 3">
+                        <img src="/q1/images/event3.jpg" class="card-img-top" alt="אירוע 3">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">סדנת די'גיי לבני נוער</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">שני, 16:00</h6>
+                        <p class="card-text">התנסות על עמדת די'גיי – כולל מיקס אמיתי עם מדריך מקצועי</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 4">
+                        <img src="/q1/images/event4.jpg" class="card-img-top" alt="אירוע 4">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">מופע סטנדאפ</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">שני, 20:00</h6>
+                        <p class="card-text">מופע קומי עם שלושה סטנדאפיסטים ישראלים</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 5">
+                        <img src="/q1/images/event5.jpeg" class="card-img-top" alt="אירוע 5">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">הקרנת סרט בטבע</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">שלישי, 21:00</h6>
+                        <p class="card-text">הקרנה פתוחה של סרט משפחתי תחת כיפת השמיים</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 6">
+                        <img src="/q1/images/event6.jpg" class="card-img-top" alt="אירוע 6">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">ערב שירה בציבור</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">רביעי, 18:00</h6>
+                        <p class="card-text">ערב שירה בציבור לכל המשפחה מקטן ועד גדול</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 7">
+                        <img src="/q1/images/event7.jpeg" class="card-img-top" alt="אירוע 7">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">מסיבת ריקודים</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">רביעי, 21:00</h6>
+                        <p class="card-text">די'גיי מוביל עם מוזיקה אלקטרונית לקהל צעיר</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/images/placeholder.jpg" class="card-img-top" alt="אירוע 8">
+                        <img src="/q1/images/event8.jpeg" class="card-img-top" alt="אירוע 8">
                         <div class="card-body">
-                        <h5 class="card-title">סדנת יצירה</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">שני, 10:00</h6>
-                        <p class="card-text">סדנת יצירה משפחתית לכל הגילאים.</p>
+                        <h5 class="card-title">הופעת סיום</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">חמישי, 22:00</h6>
+                        <p class="card-text">הופעה חיה של להקת רוק מקומית לסיום הפסטיבל</p>
                         <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
                         </div>
                     </div>
