--- a/q1/index.html
+++ b/q1/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>מערכת אירועים בפסטיבל</title>
+        <title>מערכת האירועים בפסטיבל</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container my-4">
-            <h1 class="text-center mb-5">מערכת האירועים של הפסטיבל</h1>
+            <h1 class="text-center mb-5">מערכת האירועים המתקיימים במהלך הפסטיבל</h1>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/show.jpg" class="card-img-top" alt="אירוע 1">
+                        <img src="../q1/images/show.jpg" class="card-img-top" alt="אירוע 1">
                         <div class="card-body">
                         <h5 class="card-title">מופע פתיחה</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 20:00</h6>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event2.jpg" class="card-img-top" alt="אירוע 2">
+                        <img src="../q1/images/event2.jpg" class="card-img-top" alt="אירוע 2">
                         <div class="card-body">
                         <h5 class="card-title">שוק לילה ובירה מקומית</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 21:00</h6>
