--- a/q1/index.html
+++ b/q1/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event3.jpg" class="card-img-top" alt="אירוע 3">
+                        <img src="../q1/images/event3.jpg" class="card-img-top" alt="אירוע 3">
                         <div class="card-body">
                         <h5 class="card-title">סדנת די'גיי לבני נוער</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שני, 16:00</h6>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event4.jpg" class="card-img-top" alt="אירוע 4">
+                        <img src="../q1/images/event4.jpg" class="card-img-top" alt="אירוע 4">
                         <div class="card-body">
                         <h5 class="card-title">מופע סטנדאפ</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שני, 20:00</h6>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event5.jpeg" class="card-img-top" alt="אירוע 5">
+                        <img src="../q1/images/event5.jpeg" class="card-img-top" alt="אירוע 5">
                         <div class="card-body">
                         <h5 class="card-title">הקרנת סרט בטבע</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שלישי, 21:00</h6>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event6.jpg" class="card-img-top" alt="אירוע 6">
+                        <img src="../q1/images/event6.jpg" class="card-img-top" alt="אירוע 6">
                         <div class="card-body">
                         <h5 class="card-title">ערב שירה בציבור</h5>
                         <h6 class="card-subtitle mb-2 text-muted">רביעי, 18:00</h6>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event7.jpeg" class="card-img-top" alt="אירוע 7">
+                        <img src="../q1/images/event7.jpeg" class="card-img-top" alt="אירוע 7">
                         <div class="card-body">
                         <h5 class="card-title">מסיבת ריקודים</h5>
                         <h6 class="card-subtitle mb-2 text-muted">רביעי, 21:00</h6>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="/q1/images/event8.jpeg" class="card-img-top" alt="אירוע 8">
+                        <img src="../q1/images/event8.jpeg" class="card-img-top" alt="אירוע 8">
                         <div class="card-body">
                         <h5 class="card-title">הופעת סיום</h5>
                         <h6 class="card-subtitle mb-2 text-muted">חמישי, 22:00</h6>
