--- a/q1/index.html
+++ b/q1/index.html
@@ -18,7 +18,7 @@
                         <h5 class="card-title">מופע פתיחה</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 20:00</h6>
                         <p  class="card-text">מופע מוזיקה לפתיחת הפסטיבל, עם אמנים מובילים</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                         <h5 class="card-title">שוק לילה ובירה מקומית</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 21:00</h6>
                         <p  class="card-text">מתחם דוכנים עם אוכל רחוב ובירות ממבשלות מקומיות</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         <h5 class="card-title">סדנת די'גיי לבני נוער</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שני, 16:00</h6>
                         <p class="card-text">התנסות על עמדת די'גיי – כולל מיקס אמיתי עם מדריך מקצועי</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         <h5 class="card-title">מופע סטנדאפ</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שני, 20:00</h6>
                         <p class="card-text">מופע קומי עם שלושה סטנדאפיסטים ישראלים</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                         <h5 class="card-title">הקרנת סרט בטבע</h5>
                         <h6 class="card-subtitle mb-2 text-muted">שלישי, 21:00</h6>
                         <p class="card-text">הקרנה פתוחה של סרט משפחתי תחת כיפת השמיים</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         <h5 class="card-title">ערב שירה בציבור</h5>
                         <h6 class="card-subtitle mb-2 text-muted">רביעי, 18:00</h6>
                         <p class="card-text">ערב שירה בציבור לכל המשפחה מקטן ועד גדול</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <h5 class="card-title">מסיבת ריקודים</h5>
                         <h6 class="card-subtitle mb-2 text-muted">רביעי, 21:00</h6>
                         <p class="card-text">די'גיי מוביל עם מוזיקה אלקטרונית לקהל צעיר</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <h5 class="card-title">הופעת סיום</h5>
                         <h6 class="card-subtitle mb-2 text-muted">חמישי, 22:00</h6>
                         <p class="card-text">הופעה חיה של להקת רוק מקומית לסיום הפסטיבל</p>
-                        <a href="https://google.com" target="_blank" class="card-link">פרטים נוספים</a>
+                        <a href="https://google.com" target="_blank" class="card-link d-block d-lg-none">פרטים נוספים</a>
                         </div>
                     </div>
                 </div>
