--- a/q1/index.html
+++ b/q1/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="../q1/images/show.jpg" class="card-img-top" alt="אירוע 1">
+                        <img src="images/show.jpg" class="card-img-top" alt="אירוע 1">
                         <div class="card-body">
                         <h5 class="card-title">מופע פתיחה</h5>
                         <h6 class="card-subtitle mb-2 text-muted">ראשון, 20:00</h6>
