--- a/q3/index.html
+++ b/q3/index.html
@@ -34,13 +34,13 @@
                     <option value="no">לא</option>
                 </select>
 
-                <label for="security">שדה אבטחה נוכחי:</label>
-                <input type="text" id="security" name="security">
-                
                 <label for="email">דוא"ל לתשובה (חובה):</label>
                 <input type="email" id="email" name="email" required>
                 
-                <button type="submit">שלח דיווח</button>  
+                <div class="btn-group">
+                    <button type="submit">שלח דיווח</button>
+                    <a href="view.html" class="btn-secondary">מעבר ללוח תקלות</a>
+                </div>
             </form>
         </main>
         <script src="script.js"></script>
